setup github actions for auto deploy to heroku

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,59 @@
+name: Deploy to Heroku
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build React client
+        run: |
+          cd server
+          npm run build:prod
+
+      - name: Install Node dependencies
+        run: |
+          npm install
+
+      - name: Heroku login credentials
+        run: |
+          cat > ~/.netrc <<EOF
+            machine api.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+            machine git.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+          EOF
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
+
+      - name: Set Heroku config variables
+        env:
+          HEROKU_APP_NAME: bike-routes
+        run: |
+          heroku config:set PROJECT_PATH=server -a $HEROKU_APP_NAME
+
+      - name: Configure Git
+        run: |
+          git config --global user.email ${{secrets.HEROKU_EMAIL}}
+          git config --global user.name tomi
+
+      - name: Deploy to Heroku
+        env:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: bike-routes
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+        run: |
+          cd server
+          git init
+          git add .
+          git commit -m "Deploy to Heroku"
+          heroku git:remote -a bike-routes
+          git push heroku master --force
