fix install dependecies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install Node dependencies
         run: |
+          cd server
           npm install
 
       - name: Heroku login credentials
