--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
+    "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
     "supertest": "^6.3.3"
   }
 }
