--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "NODE_ENV=test jest --runInBand --silent",
+    "test": "jest --runInBand --silent",
     "build:dev": "cd ../client && npm install && npm run build && xcopy /s /y /i dist ..\\server\\dist && rmdir /s /q dist && cd ../server",
     "build:prod": "cd ../client && npm install && npm run build && cp -r dist ../server/dist && rm -rf dist && cd ../server"
   },
@@ -16,7 +16,6 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
