--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres:69eright@localhost:5432/mydatabase
+DATABASE_URL=postgres://postgres:69eright@localhost:5432/postgres
 TEST_DATABASE_URL=postgres://postgres:69eright@localhost:5432/testDatbase
