set up test database connection for api tests

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://postgres:69eright@localhost:5432/postgres
-TEST_DATABASE_URL=postgres://postgres:69eright@localhost:5432/testDatbase
+DATABASE_URL=postgres://iasxamdv:7k3iP0VXgHEFTKUZZtuzS4Om7dnfFQL0@balarama.db.elephantsql.com/iasxamdv
+TEST_DATABASE_URL=postgres://juzluzho:RMKTgfzlYfRLP6HaYf9GiayLIRsF-8YY@balarama.db.elephantsql.com/juzluzho
