--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,9 @@
   "devDependencies": {
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./__test__/teardown.js"
   }
 }
