--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
