--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
