--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@testing-library/react-hooks": "^8.0.1",
     "axios": "^1.4.0",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-table": "^7.8.0"
