--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-leaflet": "^3.0.0",
     "@types/react-table": "^7.7.14",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
