--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "test": "set NODE_ENV=test&& jest --runInBand --silent",
     "test:single": "set NODE_ENV=test&&  jest --runInBand --silent --testPathPattern=stationsAPI.test.js",
     "build:dev": "cd ../client && npm install && npm run build && xcopy /s /y /i dist ..\\server\\dist && rmdir /s /q dist && cd ../server",
-    "build:prod": "cd ../client && npm install && npm run build && cp -r dist ../server/dist && rm -rf dist && cd ../server"
+    "build:prod": "cd ../client && npm install --legacy-peer-deps && npm run build && cp -r dist ../server/dist && rm -rf dist && cd ../server"
   },
   "author": "",
   "license": "ISC",
