--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "test": "vitest",
     "dev": "vite",
     "build": "tsc && vite build",
+    "cy:open-e2e": "cypress open --e2e --browser chrome",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -34,11 +36,13 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.12.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^22.0.0",
     "postcss": "^8.4.23",
+    "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
