add debounce to station search

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
