--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "set NODE_ENV=test&& jest --runInBand --silent",
-    "test:single": "set NODE_ENV=test&&  jest --runInBand --silent --testPathPattern=stationsAPI.test.js",
+    "test:single": "set NODE_ENV=test&&  jest --runInBand --silent --testPathPattern=addStationValidationSchema.test.js",
     "build:dev": "cd ../client && npm install && npm run build && xcopy /s /y /i dist ..\\server\\dist && rmdir /s /q dist && cd ../server",
     "build:prod": "cd ../client && npm install --legacy-peer-deps && npm run build && cp -r dist ../server/dist && rm -rf dist && cd ../server"
   },
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
