--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "set NODE_ENV=test&& jest --runInBand --silent",
-    "test:single": "set NODE_ENV=test&&  jest --runInBand --silent --testPathPattern=stationModelValidation.test.js",
+    "test:single": "set NODE_ENV=test&&  jest --runInBand --silent --testPathPattern=stationApi.test.js",
     "build:dev": "cd ../client && npm install && npm run build && xcopy /s /y /i dist ..\\server\\dist && rmdir /s /q dist && cd ../server",
     "build:prod": "cd ../client && npm install --legacy-peer-deps && npm run build && cp -r dist ../server/dist && rm -rf dist && cd ../server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "blob": "^0.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -22,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-blob": "^0.0.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "sequelize": "^6.31.1",
