--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blob": "^0.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -26,8 +25,7 @@
     "node-blob": "^0.0.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
-    "sequelize": "^6.31.1",
-    "yup": "^1.1.1"
+    "sequelize": "^6.31.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
