--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "test": "vitest",
     "dev": "vite",
     "build": "tsc && vite build",
-    "cy:open-e2e": "cypress open --e2e --browser chrome",
+    
+    : "cypress open --e2e --browser chrome",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
