--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,7 @@
     "test": "vitest",
     "dev": "vite",
     "build": "tsc && vite build",
-    
-    : "cypress open --e2e --browser chrome",
+    "cy:open-e2e": "cypress open --e2e --browser chrome",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
