--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
+    "@types/eventsource": "^1.1.11",
     "axios": "^1.4.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
