--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-table": "^7.8.0",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^9.0.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
