--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/leaflet": "^1.9.3",
