--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,8 +17,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "types": ["cypress", "@testing-library/cypress", "@types/cypress"]
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "../node_modules/cypress",
+    "../node_modules/@testing-library/cypress"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
