Select Departure Date

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-leaflet": "^4.2.1",
@@ -34,6 +35,7 @@
     "@types/jest": "^29.5.1",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "@types/react-leaflet": "^3.0.0",
     "@types/react-table": "^7.7.14",
