--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,7 +19,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "types": ["cypress", "@testing-library/cypress", "@types/cypress"]
+    "types": ["cypress", "@testing-library/cypress"]
   },
   "include": [
     "src",
