--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,6 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "globalTeardown": "./__test__/teardown.js",
-    "testTimeout": 1000000
+    "globalTeardown": "./__test__/teardown.js"
   }
 }
