--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "test": "set NODE_ENV=test&& jest --runInBand --silent",
     "test:single": "set NODE_ENV=test&&  jest --runInBand --silent --testPathPattern=stationsQueryValidators.test.js",
-    "build:dev": "cd ../client && npm install && npm run build && xcopy /s /y /i dist ..\\server\\dist && rmdir /s /q dist && cd ../server",
+    "build:dev": "cd ../client && npm install && npm run build && xcopy /s /y /i dist ..\\server\\dist && rmdir /s /q dist && cd ../server && npm run dev",
     "build:prod": "cd ../client && npm install --legacy-peer-deps && npm run build && cp -r dist ../server/dist && rm -rf dist && cd ../server"
   },
   "author": "",
